--- a/header.html
+++ b/header.html
@@ -26,5 +26,117 @@
       <li>DISLIKES one</li>
       <li>DISLIKES two</li>
     </ul>
+    <p id="top">TOP</p>
+    <!--table-->
+    <table>
+      <tr>
+        <th>SNO</th>
+        <th>Name</th>
+        <th>Age</th>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>Tay</td>
+        <td>25</td>
+      </tr>
+    </table>
+    <br />
+    <p>Copyright of someone &copy;</p>
+
+    <!--style attributeas-->
+    <p style="color: blueviolet; background-color: gold">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti
+      quisquam necessitatibus voluptates recusandae eum, nobis eveniet similique
+      est asperiores, fugit nam, pariatur possimus earum doloremque inventore
+      reprehenderit nulla veritatis omnis
+    </p>
+
+    <p style="color: rgb(0, 255, 0); background-color: rgb(0, 0, 10)">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti
+      quisquam necessitatibus voluptates recusandae eum, nobis eveniet similique
+      est asperiores, fugit nam, pariatur possimus earum doloremque inventore
+      reprehenderit nulla veritatis omnis
+    </p>
+
+    <p
+      style="
+        width: 250px;
+        height: 250px;
+        color: rgb(0, 255, 0);
+        background-color: rgb(0, 0, 10);
+      "
+    >
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti
+      quisquam necessitatibus voluptates recusandae eum, nobis eveniet similique
+      est asperiores, fugit nam, pariatur possimus earum doloremque inventore
+      reprehenderit nulla veritatis omnis
+    </p>
+    <!-- div-->
+    <div style="color: green; height: 100px; width: 500px">
+      <p style="background-color: aqua">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+        exercitationem amet id iusto voluptatum ipsam harum, itaque sint vel
+        vero illum molestiae eligendi, optio repudiandae voluptas consequatur
+        asperiores esse facere.
+      </p>
+    </div>
+    <br />
+    <h1>FORM</h1>
+    <!--form-->
+    
+      <label for="username">Username</label>
+      <input type="text" id="username" name="name-data" required>
+      <br />
+      <label for="descriptions">Descriptions</label>
+      <textarea
+        id="descriptions"
+        name="desc-data"
+        style="height: 50px; resize: none"
+      >
+  asdf</textarea
+      >
+      <br />
+      <label for="start">Start date:</label>
+      <input
+        type="date"
+        id="start"
+        name="trip-start"
+        value="2018-07-22"
+        min="2018-01-01"
+        max="2018-12-31"
+      />
+      <br />
+      <label for="cars">Choose a car:</label>
+
+      <select name="cars" id="cars">
+        <option value="volvo">Volvo</option>
+        <option value="saab">Saab</option>
+        <option value="mercedes">Mercedes</option>
+        <option value="audi">Audi</option>
+      </select>
+<br>
+      <input type="radio" id="html" name="fav_language" value="HTML">
+        <label for="html">HTML</label><br>
+        <input type="radio" id="css" name="fav_language" value="CSS">
+        <label for="css">CSS</label><br>
+        <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+        <label for="javascript">JavaScript</label>
+    </input>
+<br>
+<br>
+
+    <input type="checkbox" id="scales" name="scales">
+      <label for="scales">Scales</label>
+    </div>
+
+    <div>
+      <input type="checkbox" id="horns" name="horns">
+      <label for="horns">Horns</label>
+      <input type="submit" value="Submit">
+
+      <a href="hhtp:www.google.com" target="_blank">Go to Google</a>
+      <a href="#top">Go to top</a>
+      <a href="second.html">Go to second html</a>
+    </form>
   </body>
 </html>
